# webcrawler-hs

./: ChangeLog.md  README.md  hie.yaml  webcrawler-hs.cabal
app/: Main.hs
src/: App.hs  Crawler.hs  Types.hs  URI.hs  Url.hs  Utils.hs
src/Utils/: URL.hs
