cabal-version:  3.0

name:           webcrawler-hs
version:        0.1.0.0
description:    Web crawler
homepage:       https://github.com/iupii/webcrawler-hs#readme
author:         Iurii Pachin
copyright:      2021 Iurii Pachin
license:        BSD-3-Clause
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/iupii/webcrawler-hs

common shared-properties
  default-language: Haskell2010
  build-depends:
      base >=4.7 && <5
    , containers
    , lens
    , modern-uri
    , mtl
    , scalpel
    , text
  ghc-options:
    -Wall

library
  import: shared-properties
  exposed-modules:
      App
      Types
      Crawler
      Utils
      Utils.URL
  other-modules:
      Paths_webcrawler_hs
  hs-source-dirs:
      src

executable webcrawler-hs-exe
  import: shared-properties
  main-is: Main.hs
  other-modules:
      Paths_webcrawler_hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      webcrawler-hs
    , optparse-applicative

test-suite webcrawler-hs-test
  import: shared-properties
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_webcrawler_hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      webcrawler-hs
